// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0


syntax = "proto3";

package connectors;
option java_package = "io.fybrik";
option go_package = "fybrik.io/fybrik/pkg/connectors/protobuf";

message CatalogDatasetRequest {
    string credential_path = 1;   // link to vault plugin for reading k8s secret with user credentials
    string dataset_id = 2;        // identifier of asset - always needed. JSON expected. Interpreted by the Connector, can contain any additional information as part of JSON
}
