// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package connectors;
option java_package = "io.fybrik";
option go_package = "fybrik.io/fybrik/pkg/connectors/protobuf";

message DatasetIdentifier {
    string dataset_id = 1;           // identifier of asset - always needed. JSON expected. Interpreted by the Connector, can contain any additional information as part of JSON
}

message DatasetContext {
    DatasetIdentifier  dataset = 1;
    AccessOperation operation = 2;
}

message ApplicationDetails {
    string processing_geography = 1;
    map<string, string> properties = 2;
}

message AccessOperation {
    enum AccessType {
        UNKNOWN = 0; 
        READ = 1;
        COPY = 2;
        WRITE = 3;
    }

    AccessType type = 1;
    string destination = 2;     //Destination for transfer or write. 
}

message ApplicationContext {
    string credential_path = 1;   // link to vault plugin for reading k8s secret with user credentials
    ApplicationDetails app_info = 2;
    repeated DatasetContext datasets = 3;
    repeated AccessOperation general_operations = 4;
}

